# Ros

devel/include/gazebo_plugins/: CameraSynchronizerConfig.h
devel/lib/beginner_tutorials/: listener  talker
devel/lib/gazebo_plugins/: camera_synchronizer  gazebo_model  hokuyo_node  pub_joint_trajectory_test  set_pose.py
devel/lib/pkgconfig/: beginner_tutorials.pc  gazebo_dev.pc  gazebo_msgs.pc  gazebo_plugins.pc  gazebo_ros.pc  gazebo_ros_control.pc  gazebo_tutorials.pc  model_control.pc  robot_description.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  sdf_prac.pc  test_description.pc  testbot_control.pc  testbot_description.pc
devel/lib/testbot_description/: parser
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/gazebo_dev/cmake/: gazebo_devConfig.cmake
src/beginner_tutorials/: CMakeLists.txt
src/robot_description/models/: box.sdf  model.config
src/sdf_prac/: CMakeLists.txt
src/sdf_prac/launch/: model.launch  spawn.launch
src/sdf_prac/models/: box.sdf  model.config
src/test_description/: CMakeLists.txt  package.xml
src/test_description/launch/: test.launch
src/test_description/urdf/: robot.xacro
src/testbot_control/: CMakeLists.txt
src/testbot_control/config/: testbot_control.yaml
src/testbot_control/launch/: testbot_control.launch
src/testbot_description/: CMakeLists.txt  model.config
src/testbot_description/launch/: testbot.launch
src/testbot_description/src/: parser.cpp
src/testbot_description/urdf/: test.urdf
(+23 files in other folders)
